--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo logo logo--header">
+      <a href="index.html" class="page-header__logo logo logo--header">
         <img src="img/logo-mobile.svg" alt="Логотип магазина Кэт Энерджи." class="page-header__logo-image" width="191" height="38">
       </a>
       <nav class="page-header__main-nav main-nav">
@@ -15,10 +15,10 @@
         </button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a>Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a href="catalog.html">Каталог продукции</a>
+            <a>Каталог продукции</a>
           </li>
           <li class="main-nav__item">
             <a href="form.html">Подбор программы</a>
@@ -26,86 +26,198 @@
         </ul>
       </nav>
     </header>
+
     <main class="page-main">
-      <h1 class="page-main__title">Функциональное питание для котов</h1>
-      <p class="page-main__description">Занялся собой? Займись котом!</p>
-      <section class="programs">
-        <a href="form.html">
-          <h2 class="programs__title">Подобрать программу</h2>
-        </a>
-        <ul class="programs__list">
-          <li class="programs__item">
-            <h3 class="programs__type">Похудение</h3>
-            <p class="programs__description">
-                Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-            </p>
-            <a class="programs__link" href="#">Каталог Slim</a>
+      <h1 class="page-main__title">Каталог продукции</h1>
+        <section class="basic">
+          <h2 class="visually-hidden">Основные товары</h2>
+          <ul class="basic__list">
+          <li class="basic__item product">
+            <h3 class="product__title">Cat Energy Pro 500 г</h3>
+            <img src="img/pro-chicken-500" alt="Cat Energy Pro со вкусом курицы: средняя упаковка">
+            <table class="product__stats">
+              <tr>
+                <td>Объем</td>
+                <td>500 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Курица</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>700 Р.</td>
+              </tr>
+            </table>
+            <a href="#" class="product__get">Заказать</a>
           </li>
-          <li class="programs__item">
-            <h3 class="programs__type">Набор массы</h3>
-            <p class="programs__description">
-                Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-            </p>
-            <a class="programs__link" href="#">Каталог Pro</a>
+          <li class="basic__item product">
+            <h3 class="product__title">Cat Energy Pro 1000 г</h3>
+            <img src="img/pro-chicken-1000" alt="Cat Energy Pro со вкусом курицы: большая упаковка" class="product__photo">
+            <table class="product__stats">
+            <tr>
+                <td>Объем</td>
+                <td>1000 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Курица</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>1000 Р.</td>
+              </tr>
+            </table>
+            <a href="#" class="product__get">Заказать</a>
+          </li>
+          <li class="basic__item product">
+            <h3 class="product__title">Cat Energy Pro 500 г</h3>
+            <img src="img/pro-fish-500" alt="Cat Energy Pro со вкусом рыбы: средняя упаковка" class="product__photo">
+            <table class="product__stats">
+              <tr>
+                <td>Объем</td>
+                <td>500 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Рыба</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>700 Р.</td>
+              </tr>
+            </table>
+            <a href="#" class="product__get">Заказать</a>
+          </li>
+          <li class="basic__item product">
+            <h3 class="product__title">Cat Energy Pro 1000 г</h3>
+            <img src="img/pro-fish-1000" alt="Cat Energy Pro со вкусом рыбы: большая упаковка" class="product__photo">
+            <table class="product__stats">
+              <tr>
+                <td>Объем</td>
+                <td>1000 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Рабы</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>1000 Р.</td>
+              </tr>
+            </table>
+            <a href="#" class="product__get">Заказать</a>
+          </li>
+          <li class="basic__item product">
+            <h3 class="product__title">Cat Energy Slim 500 г</h3>
+            <img src="img/slim-buckwheat-500" alt="Cat Energy Slim со вкусом гречки: средняя упаковка" class="product__photo">
+            <table class="product__stats">
+              <tr>
+                <td>Объем</td>
+                <td>500 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Гречка</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>400 Р.</td>
+              </tr>
+            </table>
+            <a href="#" class="product__get">Заказать</a>
+          </li>
+          <li class="basic__item product">
+            <h3 class="product__title">Cat Energy Slim 1000 г</h3>
+            <img src="img/slim-buckwheat-1000" alt="Cat Energy Slim со вкусом гречки: большая упаковка" class="product__photo">
+            <table class="product__stats">
+              <tr>
+                <td>Объем</td>
+                <td>1000 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Гречка</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>700 Р.</td>
+              </tr>
+            </table>
+            <a href="#" class="product__get">Заказать</a>
+          </li>
+          <li class="basic__item product">
+            <h3 class="product__title">Cat Energy Slim 500 г</h3>
+            <img src="img/slim-rice-500" alt="Cat Energy Slim со вкусом риса: средняя упаковка" class="product__photo">
+            <table class="product__stats">
+              <tr>
+                <td>Объем</td>
+                <td>500 г</td>
+              </tr>
+              <tr>
+                <td>Вкус</td>
+                <td>Рис</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>500 Р.</td>
+              </tr>
+            </table>
+            <a href="#" class="product__get">Заказать</a>
           </li>
         </ul>
-      </section>
-      <section class="about">
-        <h2 class="about__title page-main__title">Как это работает</h2>
-        <ul class="about__list">
-          <li class="about__item about__item--step-one">
-            Функциональное питание содержит только полезные питательные вещества.
-          </li>
-          <li class="about__item about__item--step-two">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-          </li>
-          <li class="about__item about__item--step-three">
-            Замените один-два приема обычной еды на наше функциональное питание.
-          </li>
-          <li class="about__item about__item--step-four">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-          </li>
-        </ul>
-      </section>
-      <section class="example">
-        <h2 class="example__title page-main__title">Живой пример</h2>
-        <p class="example__text">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <table class="example__total total">
-          <caption class="total__summary">
-            Затраты на питание: <span class="total__price">15 000 руб.</span>
-          </caption>
-          <tr class="total__wrapper">
-            <td class="total__object">Снижение веса</td>
-            <td class="total__count">5 кг</td>
-          </tr>
-          <tr class="total__wrapper">
-            <td class="total__object">Затрачено времени</td>
-            <td class="total__count">60 дней</td>
-          </tr>
-        </table>
-        <div class="example__slider toggle">
-          <ul class="toggle__list">
-            <li class="toggle__item toggle__item--current">
-              <img src="img/before-mobile@1x.png" alt="Кот до программы (толстый).">
-            </li>
-            <li class="toggle__item">
-              <img src="img/after-mobile@1x.png" alt="Кот после программы (худой).">
-            </li>
-          </ul>
-          <div class="toggle__actions">
-            <button class="toggle__button" type="button">Было</button>
-            <div class="toggle__slider">
-              <div class="toggle__grip"></div>
-            </div>
-            <button class="toggle__button" type="button">Стало</button>
-          </div>
+        <div class="basic__next product product--empty">
+          <h3 class="product__title">Показать еще 100500 товаров</h3> <!-- Это вообще заголовок? -->
+          <p>На самом деле вкусов гораздо больше!</p>
+          <a class="product__get" href="#">Показать все</a>
         </div>
       </section>
+
+      <section class="additives">
+        <h2 class="additives__title page-main__subtitle">Дополнительные товары</h2>
+        <ul class="additives__list">
+          <li class="additives__item product">
+            <h3 class="product__title">Сахарозаменитель</h3>
+            <p class="product__stats">
+              1 упаковка (100 г)
+              <b>100 Р.</b>
+            </p>
+            <a href="" class="product__get">Заказать</a>
+          </li>
+          <li class="additives__item product">
+            <h3 class="product__title">Питьевая вода</h3>
+            <p class="product__stats">
+              5 литров
+              <b>50 Р.</b>
+            </p>
+            <a href="" class="product__get">Заказать</a>
+          </li>
+          <li class="additives__item product">
+            <h3 class="product__title">Молоко</h3>
+            <p class="product__stats">
+              1 литр
+              <b>100 Р.</b>
+            </p>
+            <a href="" class="product__get">Заказать</a>
+          </li>
+          <li class="additives__item product">
+            <h3 class="product__title">Витамины</h3>
+            <p class="product__stats">
+              1 упаковка (30 г)
+              <b>300 Р.</b>
+            </p>
+            <a href="" class="product__get">Заказать</a>
+          </li>
+        </ul>
+      </section>
+
+      <aside class="offer">
+        <p class="offer__text">Закажите все и получите чехол для кота в пордарок!</p>
+      </aside>
+
     </main>
 
-  <footer class="page-footer">
+    <footer class="page-footer">
       <div class="page-footer__cooperation">
         <b class="cooperation__offer">Приглашаем к&nbsp;сотрудничеству дилеров!</b>
         <address class="cooperation__address">
