--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo logo logo--header">
+      <a href="index.html" class="page-header__logo logo logo--header">
         <img src="img/logo-mobile.svg" alt="Логотип магазина Кэт Энерджи." class="page-header__logo-image" width="191" height="38">
       </a>
       <nav class="page-header__main-nav main-nav">
@@ -15,97 +15,103 @@
         </button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a>Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
             <a href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a href="form.html">Подбор программы</a>
+            <a>Подбор программы</a>
           </li>
         </ul>
       </nav>
     </header>
+
     <main class="page-main">
-      <h1 class="page-main__title">Функциональное питание для котов</h1>
-      <p class="page-main__description">Занялся собой? Займись котом!</p>
-      <section class="programs">
-        <a href="form.html">
-          <h2 class="programs__title">Подобрать программу</h2>
-        </a>
-        <ul class="programs__list">
-          <li class="programs__item">
-            <h3 class="programs__type">Похудение</h3>
-            <p class="programs__description">
-                Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-            </p>
-            <a class="programs__link" href="#">Каталог Slim</a>
-          </li>
-          <li class="programs__item">
-            <h3 class="programs__type">Набор массы</h3>
-            <p class="programs__description">
-                Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-            </p>
-            <a class="programs__link" href="#">Каталог Pro</a>
-          </li>
-        </ul>
-      </section>
-      <section class="about">
-        <h2 class="about__title page-main__title">Как это работает</h2>
-        <ul class="about__list">
-          <li class="about__item about__item--step-one">
-            Функциональное питание содержит только полезные питательные вещества.
-          </li>
-          <li class="about__item about__item--step-two">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-          </li>
-          <li class="about__item about__item--step-three">
-            Замените один-два приема обычной еды на наше функциональное питание.
-          </li>
-          <li class="about__item about__item--step-four">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-          </li>
-        </ul>
-      </section>
-      <section class="example">
-        <h2 class="example__title page-main__title">Живой пример</h2>
-        <p class="example__text">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <table class="example__total total">
-          <caption class="total__summary">
-            Затраты на питание: <span class="total__price">15 000 руб.</span>
-          </caption>
-          <tr class="total__wrapper">
-            <td class="total__object">Снижение веса</td>
-            <td class="total__count">5 кг</td>
-          </tr>
-          <tr class="total__wrapper">
-            <td class="total__object">Затрачено времени</td>
-            <td class="total__count">60 дней</td>
-          </tr>
-        </table>
-        <div class="example__slider toggle">
-          <ul class="toggle__list">
-            <li class="toggle__item toggle__item--current">
-              <img src="img/before-mobile@1x.png" alt="Кот до программы (толстый).">
+      <h1 class="page-main__title">Каталог продукции</h1>
+      <p class="page-main__description">
+        Заполните анкету и мы подберем программу питания для вашего кота
+      </p>
+      <!-- <section class="form">
+        <h2 class="visually-hidden">
+          Форма для заполнения
+        </h2>
+      </section> -->
+      <form class="form" action="https://echo.htmlacademy.ru" method="get">
+        <div class="form__field">
+          <h3 class="visually-hidden">Данные питомца</h3>
+          <p class="form__input form__input--text">
+            <label class="form__label" for="name">Имя:*</label>
+            <input type="text" name="name" id="name" placeholder="Барсик" required>
+          </p>
+          <p class="form__input form__input--text">
+            <label class="form__label" for="weight">Вес (кг):*</label>
+            <input type="text" name="weight" id="weight" placeholder="7" required>
+          </p>
+          <p class="form__input form__input--text">
+            <label class="form__label" for="age">Возраст (лет):</label>
+            <input type="text" name="age" id="age" placeholder="7">
+          </p>
+        </div>
+        <div class="form__field">
+          <h3 class="visually-hidden">Ваша цель</h3>
+          <ul class="form__list">
+            <li class="form__input form__input--radio">
+              <input class="visually-hidden" type="radio" name="purpose" id="loss" value="loss" checked>
+              <label for="loss">Похудение</label>
             </li>
-            <li class="toggle__item">
-              <img src="img/after-mobile@1x.png" alt="Кот после программы (худой).">
+            <li class="form__input form__input--radio">
+              <input class="visually-hidden" type="radio" name="purpose" id="gain" value="gain">
+              <label for="gain">Набор массы</label>
+            </li>
+            <li class="form__input form__input--radio">
+              <input class="visually-hidden" type="radio" name="purpose" id="unknown" value="unknown">
+              <label for="unknown">Не знаю (нужен ваш совет)</label>
             </li>
           </ul>
-          <div class="toggle__actions">
-            <button class="toggle__button" type="button">Было</button>
-            <div class="toggle__slider">
-              <div class="toggle__grip"></div>
-            </div>
-            <button class="toggle__button" type="button">Стало</button>
-          </div>
         </div>
-      </section>
+        <div class="form__field">
+          <h3 class="form__title page-main__subtitle">Контактные данные (владельца кота)</h3>
+          <p class="form__input form__input--text">
+            <label class="form__label" for="email">E-mail:*</label>
+            <input type="text" name="email" id="email" placeholder="kuklachev@gmail.com" required>
+          </p>
+          <p class="form__input form__input--text">
+            <label class="form__label" for="phone">Телефон:*</label>
+            <input type="text" name="phone" id="phone" placeholder="8 (960) 900-60-90" required>
+          </p>
+        </div>
+        <div class="form__field form__field--light form__field--textarea ">
+          <h3 class="form__title page-main__subtitle">Комментарий</h3>
+          <textarea class="form__input form__input--textarea" name="comment" id="comment" cols="30" rows="10" placeholder="Расскажите обо всех повадках кота"></textarea>
+        </div>
+        <div class="form__field">
+          <h3 class="form__title page-main__subtitle">Дополнительно</h3>
+          <ul class="form__list">
+            <li class="form__input form__input--checkbox">
+              <input class="visually-hidden" type="checkbox" name="sweetener" id="sweetener" checked>
+              <label for="sweetener">Сахарозаменитель</label>
+            </li>
+            <li class="form__input form__input--checkbox">
+              <input class="visually-hidden" type="checkbox" name="water" id="water">
+              <label for="water">Питьевая вода</label>
+            </li>
+            <li class="form__input form__input-checkbox">
+              <input class="visually-hidden" type="checkbox" name="milk" id="milk">
+              <label for="milk">Молоко</label>
+            </li>
+            <li class="form__input form__input--checkbox">
+              <input class="visually-hidden" type="checkbox" name="vitamins" id="vitamins">
+              <label for="vitamins">Витамины</label>
+            </li>
+          </ul>
+        </div>
+        <small class="form__note"><sup>*</sup> — обязательные поля</small>
+        <button class="form__button" type="submit">Отправить заявку</button>
+      </form>
     </main>
 
-  <footer class="page-footer">
+    <footer class="page-footer">
       <div class="page-footer__cooperation">
         <b class="cooperation__offer">Приглашаем к&nbsp;сотрудничеству дилеров!</b>
         <address class="cooperation__address">
@@ -182,3 +188,4 @@
     </footer>
   </body>
 </html>
+
